Refactored level factory and associated classes to use nested list of GemColors to populate the grid.